feat: 仕訳サービスの集計処理を改善し、エラーハンドリングを強化

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,10 @@
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/tbf18/",
             "cwd": "${workspaceFolder}/cmd/tbf18/",
+            "args": [
+                "sample_data.csv",
+                "按分サンプル.xlsx"
+            ]
         }
     ]
 }
